--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
+    "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
