--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "css-loader": "^6.10.0",
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.90.0"
   }
 }
